--- a/WeatherApp/View/WeatherWindows.xaml
+++ b/WeatherApp/View/WeatherWindows.xaml
@@ -18,16 +18,17 @@
         </Grid.RowDefinitions>
         <StackPanel Margin="20">
             <TextBlock Text="Search for a city:"/>
-            <TextBox Text="{Binding Query, Mode=TwoWay}"/>
+            <TextBox Text="{Binding Query, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <Button Margin="0,10"
                     Content="Search"
                     Command="{Binding SearchCommand}"
                     CommandParameter="{Binding Query}"/>
-            <ListView>
+            <ListView ItemsSource="{Binding Cities}"
+                      SelectedValue="{Binding SelectecCity}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
-                            <TextBlock/>
+                            <TextBlock Text="{Binding Path=LocalizedName}"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
